# fsh

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.githooks/: pre-commit
.github/workflows/: code-quality.yml  licenses.yml
src/: builtin.rs  command.rs  executor.rs  main.rs  parser.rs  path.rs  scanner.rs  shell.rs
