[package]
name = "fsh"
version = "0.1.0"
authors = ["fowl-ow <80642246+fowl-ow@users.noreply.github.com>"]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/fowl-ow/fsh"

[dependencies]
nix = { version = "0.31.1", features = ["fs"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
